more replit friendly, standardizes screenshots

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div id="biographies">
 
   </div>
-  <script type="text/javascript" src="challenge.js"></script>
+  <script type="text/javascript" src="index.js"></script>
 </body>
 
 </html>
